# p-engine

./: .gitignore  CMakeLists.txt  README.md  TODO.md  compile.sh  compile_win.sh  toolchain-linux32.cmake  toolchain-linux64.cmake  toolchain-windows32.cmake  toolchain-windows64.cmake  wcompile-st.bat  wcompile.bat
info/: factions.txt  gameplay.txt  roadmap.txt  story.txt
res/spr/pgi/: spin.pgs
res/spr/pgi/backup/: pi.pgs  sout.pgs
src/: main.cpp
src/app/: state_game.cpp  state_game.hpp  state_intro.cpp  state_intro.hpp  state_menu.cpp  state_menu.hpp
src/app/game/: block.cpp  block.hpp  controller.cpp  controller.h  controller.hpp  enviroment_controller.cpp  enviroment_controller.h  enviroment_controller.hpp  player_controller.cpp  player_controller.h  player_controller.hpp  resourcer.cpp  resourcer.h
src/app/game/entities/: entity.hpp  template.hpp
src/app/game/entities/object/: item.hpp
src/app/game/entities/player/: player.cpp  player.hpp  player_arm.hpp  player_move.cpp
src/app/game/entity/: entity.h  entityCreator.cpp  entityCreator.h  entityData.h  event.h  stateMachine.h
src/app/game/entity/component/: cActivity.h  cAll.h  cControl.h  cRender.h  cStats.h
src/app/game/entity/component/activity/: cAGround.cpp  cAGround.h  cANull.h
src/app/game/entity/component/control/: cCBasic.cpp  cCBasic.h  cCFollower.cpp  cCFollower.h  cCPlayerInput.h
src/app/game/entity/component/render/: cRHumanoid.cpp  cRHumanoid.h
src/app/game/entity/component/stats/: Attribute.h  Buff.h
src/app/game/entity/component/stats/actions/: action.h
src/app/game/event/: event.h
src/app/game/particles/: particle.hpp  particle_block.hpp  particle_bubble.hpp  particle_rain.hpp
src/app/game/player/: inventory.cpp  inventory.hpp  item.cpp  item.hpp  itemdef.hpp
src/app/game/tools/: light_controller.cpp  light_controller.hpp  resource_controller.cpp  resource_controller.hpp  worldgen.cpp  worldgen.hpp
src/app/menu/: menu.h  menu_class.hpp  menu_credits.hpp  menu_main.hpp  menu_options.hpp  menu_optionsc.hpp  menu_optionsg.hpp  menu_optionss.hpp  settings_man.cpp  settings_man.hpp  widget.h  widget.hpp  widget_simple.hpp
src/pge/: constants.cpp  constants.hpp  core.cpp  core.hpp  crypt.cpp  crypt.hpp  debug.cpp  debug.hpp  draw.cpp  draw.hpp  file.cpp  file.hpp  image.cpp  image.hpp  ini.cpp  ini.hpp  input.cpp  input.hpp  locale.cpp  locale.hpp  network.hpp  pge.hpp  shader.cpp  shader.hpp  sound.cpp  sound.hpp  stateman.hpp  text.cpp  text.hpp  thread.hpp  types.cpp  types.hpp
