cmake_minimum_required(VERSION 2.6)

if ( ${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR} )
    message( FATAL_ERROR "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there. You may need to remove CMakeCache.txt." )
endif()

project(P-Engine)
set(CMAKE_BUILD_TYPE Release)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -O3 -Wno-narrowing")
set(EXECUTABLE_NAME "P-Engine")
set (PROJECT_INCLUDE_DIRS "")

file(GLOB_RECURSE PROJECT_SOURCES "src/*.cpp")
include_directories("src")
add_executable (${EXECUTABLE_NAME} ${PROJECT_SOURCES})

INCLUDE(FindPkgConfig)
find_package(Boost REQUIRED filesystem)
#find_package( CURL REQUIRED )
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
PKG_SEARCH_MODULE(SDL2MIXER REQUIRED SDL2_mixer>=2.0.0)
PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf>=2.0.0)
PKG_SEARCH_MODULE(SDL2NET REQUIRED SDL2_net>=2.0.0)
PKG_SEARCH_MODULE(SDL2GPU REQUIRED SDL2_gpu>=2.0.0)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIR} ${SDL2MIXER_INCLUDE_DIR} ${SDL2TTF_INCLUDE_DIR} ${SDL2NET_INCLUDE_DIR} ${SDL2GPU_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2MIXER_LIBRARIES} ${SDL2TTF_LIBRARIES} ${SDL2NET_LIBRARIES} ${SDL2GPU_LIBRARIES} ${Boost_LIBRARIES})
